Revert "Bug 517841 - [9] Support Java 9 APT models"
This reverts commit 283577df31995be496d457d85aa9674527171ce4.